# UCF-Chip-2

./: Cargo.toml
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: main.rs
chip4/: Cargo.toml
chip4/src/: lib.rs
config/: baseline_modifiers.yaml  regulator_update_tables.yaml
crates/asset_chunker/: Cargo.toml
crates/asset_chunker/src/: lib.rs
crates/asset_rehydration/: Cargo.toml
crates/asset_rehydration/src/: lib.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/baseline_resolver/: Cargo.toml
crates/baseline_resolver/src/: lib.rs
crates/biophys_assets/: Cargo.toml
crates/biophys_assets/src/: lib.rs
crates/biophys_channels/: Cargo.toml
crates/biophys_channels/src/: lib.rs
crates/biophys_compartmental_solver/: Cargo.toml
crates/biophys_compartmental_solver/src/: lib.rs
crates/biophys_compartmental_solver/tests/: l4_ca_like.rs  l4_compartment_demo.rs  l4_multi_compartment.rs
crates/biophys_event_queue_l4/: Cargo.toml
crates/biophys_homeostasis_l4/: Cargo.toml
crates/biophys_morphology/: Cargo.toml
crates/biophys_plasticity_l4/: Cargo.toml
crates/biophys_runtime/: Cargo.toml
crates/biophys_solver/: Cargo.toml
crates/biophys_synapses_l4/: Cargo.toml
crates/biophys_synapses_l4/src/: lib.rs
crates/biophys_synapses_l4/tests/: l4_nmda.rs  l4_plasticity.rs  l4_stp.rs  l4_synapses.rs
crates/biophys_targeting_l4/: Cargo.toml
crates/biophys_targeting_l4/src/: lib.rs
crates/biophys_trace/: Cargo.toml
crates/biophys_trace/examples/: generate_sn_trace.rs
crates/biophys_trace/src/: lib.rs  sn_l4.rs
crates/biophys_trace/tests/: sn_l4_harness.rs  trace_regression.rs  trace_run_commit_disabled.rs
crates/dbm_0_sn/: Cargo.toml
crates/dbm_0_sn/src/: lib.rs
crates/dbm_12_insula/: Cargo.toml
crates/dbm_12_insula/src/: lib.rs
crates/dbm_13_hypothalamus/: Cargo.toml
crates/dbm_13_hypothalamus/src/: lib.rs
crates/dbm_18_cerebellum/: Cargo.toml
crates/dbm_6_dopamin_nacc/: Cargo.toml
crates/dbm_7_lc/: Cargo.toml
crates/dbm_7_lc/src/: lib.rs
crates/dbm_8_serotonin/: Cargo.toml
crates/dbm_8_serotonin/src/: lib.rs
crates/dbm_9_amygdala/: Cargo.toml
crates/dbm_9_amygdala/src/: lib.rs
crates/dbm_bus/: Cargo.toml
crates/dbm_bus/src/: lib.rs
crates/dbm_bus/tests/: determinism.rs  evidence_refs.rs  golden_brainbus.rs  modulator_mapping.rs  property_brainbus.rs  property_modules.rs
crates/dbm_core/: Cargo.toml
crates/dbm_core/src/: lib.rs  (+1 more)
crates/dbm_hpa/: Cargo.toml
crates/dbm_hpa/src/: lib.rs
crates/dbm_pag/: Cargo.toml
crates/dbm_pag/src/: lib.rs
crates/dbm_pmrf/: Cargo.toml
crates/dbm_pmrf/src/: lib.rs
crates/dbm_pprf/: Cargo.toml
crates/dbm_sc/: Cargo.toml
crates/dbm_stn/: Cargo.toml
crates/dbm_stn/src/: lib.rs
crates/emotion_field/: Cargo.toml
crates/memristor_backend/: Cargo.toml
crates/microcircuit_amygdala_biophys/: Cargo.toml
crates/microcircuit_amygdala_biophys/src/: lib.rs
crates/microcircuit_amygdala_l4/: Cargo.toml
crates/microcircuit_amygdala_l4/src/: lib.rs
crates/microcircuit_amygdala_pop/: Cargo.toml
crates/microcircuit_amygdala_pop/src/: lib.rs
crates/microcircuit_amygdala_stub/: Cargo.toml
crates/microcircuit_core/: Cargo.toml
crates/microcircuit_hpa_memristor/: Cargo.toml
crates/microcircuit_hpa_memristor/src/: lib.rs
crates/microcircuit_hypothalamus_l4/: Cargo.toml
crates/microcircuit_hypothalamus_l4/src/: lib.rs
crates/microcircuit_insula_fusion/: Cargo.toml
crates/microcircuit_insula_fusion/src/: lib.rs
crates/microcircuit_insula_l4/: Cargo.toml
crates/microcircuit_insula_stub/: Cargo.toml
crates/microcircuit_lc_biophys/: Cargo.toml
crates/microcircuit_lc_biophys/src/: lib.rs
crates/microcircuit_lc_l4/: Cargo.toml
crates/microcircuit_lc_l4/src/: lib.rs
crates/microcircuit_lc_spike/: Cargo.toml
crates/microcircuit_lc_spike/src/: lib.rs
crates/microcircuit_lc_stub/: Cargo.toml
crates/microcircuit_pag_attractor/: Cargo.toml
crates/microcircuit_pag_attractor/src/: lib.rs
crates/microcircuit_pag_biophys/: Cargo.toml
crates/microcircuit_pag_l4/: Cargo.toml
crates/microcircuit_pag_stub/: Cargo.toml
crates/microcircuit_pmrf_biophys/: Cargo.toml
crates/microcircuit_pmrf_biophys/src/: lib.rs
crates/microcircuit_pmrf_rhythm/: Cargo.toml
crates/microcircuit_pmrf_stub/: Cargo.toml
crates/microcircuit_sc_attractor/: Cargo.toml
crates/microcircuit_sc_stub/: Cargo.toml
crates/microcircuit_serotonin_attractor/: Cargo.toml
crates/microcircuit_serotonin_stub/: Cargo.toml
crates/microcircuit_sn_attractor/: Cargo.toml
crates/microcircuit_sn_biophys/: Cargo.toml
crates/microcircuit_sn_l4/: Cargo.toml
crates/microcircuit_sn_stub/: Cargo.toml
crates/microcircuit_stn_biophys/: Cargo.toml
crates/microcircuit_stn_hold/: Cargo.toml
crates/microcircuit_stn_stub/: Cargo.toml
crates/pvgs/: Cargo.toml
crates/query/: Cargo.toml
crates/replay_evidence/: Cargo.toml
crates/scorecards/: Cargo.toml
docs/: README.md  architecture.md  asset_conventions.md  assets.md  feature_matrix.md  l4_determinism.md  runbook_determinism.md
docs/architecture/: chip2_overview.md  interfaces.md  microcircuit_path.md  testing_strategy.md
docs/modules/: dbm_0_sn.md  dbm_12_insula.md  dbm_13_hypothalamus.md  dbm_18_cerebellum.md  dbm_6_dopamin_nacc.md  dbm_7_lc.md  dbm_8_serotonin.md  dbm_9_amygdala.md  dbm_hpa.md  dbm_pag.md  dbm_pmrf.md  dbm_pprf.md  dbm_sc.md  dbm_stn.md
docs/templates/: config_template.md  module_template.md  test_template.md
engine/: Cargo.toml
engine/src/: asset_publisher.rs  lib.rs  microcircuit_publisher.rs  proto_bridge.rs
engine/tests/: baseline_integration.rs  brain_bus_engine.rs  cbv_digest_roundtrip.rs  common.rs  dopamin_integration.rs  macro_milestone_cbv_control.rs  trace_health.rs
hpa/src/: lib.rs
profiles/: Cargo.toml
profiles/src/: classification.rs  config.rs  lib.rs
pvgs_client/: Cargo.toml
pvgs_client/src/: lib.rs  local.rs
rsv/: Cargo.toml
rsv/src/: lib.rs
ucf-protocol/: Cargo.toml
ucf-protocol/src/: lib.rs
wire/: Cargo.toml
wire/src/: lib.rs
(+43 files in other folders)
