[workspace]
members = [
    "wire",
    "rsv",
    "engine",
    "profiles",
    "hpa",
    "pvgs_client",
    "app",
    "ucf-protocol", "chip4",
    "crates/dbm_core",
    "crates/dbm_13_hypothalamus",
    "crates/dbm_12_insula",
    "crates/dbm_0_sn",
    "crates/dbm_7_lc",
    "crates/dbm_8_serotonin",
    "crates/dbm_6_dopamin_nacc",
    "crates/dbm_9_amygdala",
    "crates/dbm_pag",
    "crates/dbm_stn",
    "crates/dbm_pmrf",
    "crates/dbm_sc",
    "crates/dbm_pprf",
    "crates/dbm_18_cerebellum",
    "crates/dbm_hpa",
    "crates/emotion_field",
    "crates/baseline_resolver",
    "crates/dbm_bus",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
