[workspace]
members = [
    "wire",
    "rsv",
    "engine",
    "profiles",
    "hpa",
    "pvgs_client",
    "app",
    "ucf-protocol", "chip4",
    "crates/dbm_core",
    "crates/dbm_13_hypothalamus",
    "crates/dbm_12_insula",
    "crates/dbm_0_sn",
    "crates/dbm_7_lc",
    "crates/dbm_8_serotonin",
    "crates/dbm_6_dopamin_nacc",
    "crates/dbm_9_amygdala",
    "crates/dbm_pag",
    "crates/dbm_stn",
    "crates/dbm_pmrf",
    "crates/dbm_sc",
    "crates/dbm_pprf",
    "crates/dbm_18_cerebellum",
    "crates/dbm_hpa",
    "crates/emotion_field",
    "crates/baseline_resolver",
    "crates/dbm_bus",
    "crates/microcircuit_core",
    "crates/memristor_backend",
    "crates/microcircuit_hpa_memristor",
    "crates/microcircuit_hypothalamus_setpoint",
    "crates/microcircuit_sn_stub",
    "crates/microcircuit_sn_attractor",
    "crates/microcircuit_lc_stub",
    "crates/microcircuit_lc_spike",
    "crates/microcircuit_lc_biophys",
    "crates/microcircuit_dopamin_stub",
    "crates/microcircuit_dopamin_attractor",
    "crates/microcircuit_serotonin_stub",
    "crates/microcircuit_serotonin_attractor",
    "crates/microcircuit_amygdala_stub",
    "crates/microcircuit_amygdala_pop",
    "crates/microcircuit_cerebellum_stub",
    "crates/microcircuit_cerebellum_pop",
    "crates/microcircuit_pag_stub",
    "crates/microcircuit_pag_attractor",
    "crates/microcircuit_stn_stub",
    "crates/microcircuit_stn_hold",
    "crates/microcircuit_pmrf_stub",
    "crates/microcircuit_pmrf_rhythm",
    "crates/microcircuit_sc_stub",
    "crates/microcircuit_sc_attractor",
    "crates/microcircuit_insula_stub",
    "crates/microcircuit_insula_fusion",
    "crates/biophys_core",
    "crates/biophys_solver",
    "crates/biophys_runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
