[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rsv = { path = "../rsv" }
profiles = { path = "../profiles" }
wire = { path = "../wire" }
blake3 = "1"
prost = "0.12"
ucf = { package = "ucf-protocol", path = "../ucf-protocol" }
pvgs_client = { path = "../pvgs_client" }
biophys_core = { path = "../crates/biophys_core" }
biophys_assets = { path = "../crates/biophys_assets" }
asset_chunker = { path = "../crates/asset_chunker" }
dbm_core = { path = "../crates/dbm_core" }
dbm_12_insula = { path = "../crates/dbm_12_insula" }
dbm_13_hypothalamus = { path = "../crates/dbm_13_hypothalamus" }
dbm_0_sn = { path = "../crates/dbm_0_sn" }
dbm_6_dopamin_nacc = { path = "../crates/dbm_6_dopamin_nacc" }
dbm_7_lc = { path = "../crates/dbm_7_lc" }
dbm_8_serotonin = { path = "../crates/dbm_8_serotonin" }
dbm_9_amygdala = { path = "../crates/dbm_9_amygdala" }
dbm_pag = { path = "../crates/dbm_pag" }
dbm_stn = { path = "../crates/dbm_stn" }
dbm_pmrf = { path = "../crates/dbm_pmrf" }
dbm_sc = { path = "../crates/dbm_sc" }
dbm_pprf = { path = "../crates/dbm_pprf" }
dbm_18_cerebellum = { path = "../crates/dbm_18_cerebellum" }
emotion_field = { path = "../crates/emotion_field" }
dbm_hpa = { path = "../crates/dbm_hpa" }
baseline_resolver = { path = "../crates/baseline_resolver" }
dbm_bus = { path = "../crates/dbm_bus" }

[dev-dependencies]
pvgs_client = { path = "../pvgs_client", features = ["local-pvgs"] }
chip4 = { path = "../chip4" }
