[package]
name = "biophys_compartmental_solver"
version = "0.1.0"
edition = "2021"

[features]
biophys = []
biophys-l4 = ["biophys"]

[dependencies]
biophys_channels = { path = "../biophys_channels" }
biophys_core = { path = "../biophys_core" }
biophys_morphology = { path = "../biophys_morphology" }
blake3 = "1"
