[package]
name = "biophys_synapses_l4"
version = "0.1.0"
edition = "2021"

[dependencies]
biophys_core = { path = "../biophys_core", features = ["biophys", "biophys-l4"] }
biophys_plasticity_l4 = { path = "../biophys_plasticity_l4" }

[features]
biophys = []
biophys-l4 = ["biophys"]
biophys-l4-synapses = ["biophys-l4"]
biophys-l4-nmda = ["biophys-l4-synapses"]
biophys-l4-stp = ["biophys-l4-synapses"]
biophys-l4-modulation = ["biophys-l4-synapses"]
biophys-l4-plasticity = ["biophys-l4-synapses"]
biophys-l4-ca = ["biophys-l4"]
biophys-l4-ca-feedback = ["biophys-l4-synapses"]

[dev-dependencies]
biophys_channels = { path = "../biophys_channels", features = ["biophys", "biophys-l4"] }
biophys_compartmental_solver = { path = "../biophys_compartmental_solver", features = ["biophys", "biophys-l4", "biophys-l4-synapses"] }
biophys_core = { path = "../biophys_core", features = ["biophys", "biophys-l4"] }
biophys_event_queue_l4 = { path = "../biophys_event_queue_l4", features = ["biophys", "biophys-l4", "biophys-l4-synapses"] }
biophys_morphology = { path = "../biophys_morphology", features = ["biophys", "biophys-l4"] }
