[package]
name = "dbm_0_sn"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
microcircuit-sn = []
microcircuit-sn-attractor = ["microcircuit-sn", "microcircuit_sn_attractor"]
biophys = []
biophys-sn = [
    "microcircuit-sn",
    "dep:microcircuit_sn_biophys",
    "microcircuit_sn_biophys/biophys",
    "biophys",
]

[dependencies]
dbm_core = { path = "../dbm_core" }
microcircuit_core = { path = "../microcircuit_core" }
microcircuit_sn_attractor = { path = "../microcircuit_sn_attractor", optional = true }
microcircuit_sn_stub = { path = "../microcircuit_sn_stub" }
microcircuit_sn_biophys = { path = "../microcircuit_sn_biophys", optional = true }
