[package]
name = "dbm_12_insula"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
microcircuit-insula-fusion = []
biophys = []
biophys-l4 = ["biophys"]
biophys-l4-synapses = ["biophys-l4"]
biophys-l4-modulation = ["biophys-l4-synapses", "microcircuit_insula_l4/biophys-l4-modulation"]
biophys-l4-insula = [
    "dep:microcircuit_insula_l4",
    "microcircuit_insula_l4/biophys-l4-insula",
    "biophys-l4-synapses",
]
biophys-l4-homeostasis = [
    "biophys-l4-insula",
    "microcircuit_insula_l4/biophys-l4-homeostasis",
]

[dependencies]
dbm_core = { path = "../dbm_core" }
microcircuit_core = { path = "../microcircuit_core" }
microcircuit_insula_stub = { path = "../microcircuit_insula_stub" }
microcircuit_insula_fusion = { path = "../microcircuit_insula_fusion" }
microcircuit_insula_l4 = { path = "../microcircuit_insula_l4", optional = true }
