[package]
name = "dbm_13_hypothalamus"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
microcircuit-hypothalamus-setpoint = []
biophys = []
biophys-l4 = ["biophys"]
biophys-l4-synapses = ["biophys-l4"]
biophys-l4-hypothalamus = [
    "dep:microcircuit_hypothalamus_l4",
    "microcircuit_hypothalamus_l4/biophys-l4-hypothalamus",
    "biophys-l4-synapses",
]
biophys-l4-hypothalamus-assets = [
    "biophys-l4-hypothalamus",
    "microcircuit_hypothalamus_l4/biophys-l4-hypothalamus-assets",
]

[dependencies]
dbm_core = { path = "../dbm_core" }
microcircuit_core = { path = "../microcircuit_core" }
microcircuit_hypothalamus_setpoint = { path = "../microcircuit_hypothalamus_setpoint" }
microcircuit_hypothalamus_l4 = { path = "../microcircuit_hypothalamus_l4", optional = true }
microcircuit_pag_stub = { path = "../microcircuit_pag_stub" }
microcircuit_pmrf_stub = { path = "../microcircuit_pmrf_stub" }
