[package]
name = "dbm_9_amygdala"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
microcircuit-amygdala-pop = ["dep:microcircuit_amygdala_pop", "dep:microcircuit_core"]

[dependencies]
dbm_core = { path = "../dbm_core" }
microcircuit_amygdala_stub = { path = "../microcircuit_amygdala_stub" }
microcircuit_amygdala_pop = { path = "../microcircuit_amygdala_pop", optional = true }
microcircuit_core = { path = "../microcircuit_core", optional = true }
