[package]
name = "dbm_9_amygdala"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
microcircuit-amygdala-pop = ["dep:microcircuit_amygdala_pop"]
biophys = []
biophys-l4 = ["biophys"]
biophys-l4-synapses = ["biophys-l4"]
biophys-l4-modulation = [
    "biophys-l4-synapses",
    "microcircuit_amygdala_l4/biophys-l4-modulation",
]
biophys-l4-amygdala = [
    "dep:microcircuit_amygdala_l4",
    "microcircuit_amygdala_l4/biophys-l4-amygdala",
    "biophys-l4-synapses",
]
biophys-l4-homeostasis = [
    "biophys-l4-amygdala",
    "microcircuit_amygdala_l4/biophys-l4-homeostasis",
]
biophys-amygdala = [
    "dep:microcircuit_amygdala_biophys",
    "microcircuit_amygdala_biophys/biophys",
    "biophys",
]

[dependencies]
dbm_core = { path = "../dbm_core" }
microcircuit_amygdala_stub = { path = "../microcircuit_amygdala_stub" }
microcircuit_amygdala_pop = { path = "../microcircuit_amygdala_pop", optional = true }
microcircuit_amygdala_biophys = { path = "../microcircuit_amygdala_biophys", optional = true }
microcircuit_amygdala_l4 = { path = "../microcircuit_amygdala_l4", optional = true }
microcircuit_core = { path = "../microcircuit_core" }

[dev-dependencies]
biophys_core = { path = "../biophys_core" }
