[package]
name = "dbm_pag"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
microcircuit-pag-attractor = ["microcircuit_pag_attractor"]
biophys = []
biophys-pag = [
    "microcircuit-pag-attractor",
    "dep:microcircuit_pag_biophys",
    "microcircuit_pag_biophys/biophys",
    "biophys",
]

[dependencies]
dbm_core = { path = "../dbm_core" }
microcircuit_core = { path = "../microcircuit_core" }
microcircuit_pag_attractor = { path = "../microcircuit_pag_attractor", optional = true }
microcircuit_pag_stub = { path = "../microcircuit_pag_stub" }
microcircuit_pag_biophys = { path = "../microcircuit_pag_biophys", optional = true }

[dev-dependencies]
biophys_core = { path = "../biophys_core" }
