[package]
name = "microcircuit_amygdala_l4"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
biophys = []
biophys-l4 = ["biophys"]
biophys-l4-synapses = ["biophys-l4"]
biophys-l4-stp = ["biophys-l4-synapses"]
biophys-l4-modulation = ["biophys-l4-synapses"]
biophys-l4-plasticity = ["biophys-l4-synapses", "biophys_synapses_l4/biophys-l4-plasticity"]
biophys-l4-amygdala = ["biophys-l4-synapses"]

[dependencies]
biophys_channels = { path = "../biophys_channels", features = ["biophys", "biophys-l4", "biophys-l4-synapses"] }
biophys_compartmental_solver = { path = "../biophys_compartmental_solver", features = ["biophys", "biophys-l4", "biophys-l4-synapses"] }
biophys_core = { path = "../biophys_core", features = ["biophys", "biophys-l4"] }
biophys_event_queue_l4 = { path = "../biophys_event_queue_l4", features = ["biophys", "biophys-l4", "biophys-l4-synapses", "biophys-l4-stp"] }
biophys_morphology = { path = "../biophys_morphology", features = ["biophys", "biophys-l4"] }
biophys_plasticity_l4 = { path = "../biophys_plasticity_l4" }
biophys_synapses_l4 = { path = "../biophys_synapses_l4", features = ["biophys", "biophys-l4", "biophys-l4-synapses", "biophys-l4-stp", "biophys-l4-modulation"] }
blake3 = "1"
dbm_core = { path = "../dbm_core" }
microcircuit_amygdala_stub = { path = "../microcircuit_amygdala_stub" }
microcircuit_core = { path = "../microcircuit_core" }
