[package]
name = "microcircuit_amygdala_l4"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
biophys = []
biophys-l4 = ["biophys"]
biophys-l4-synapses = ["biophys-l4"]
biophys-l4-nmda = [
    "biophys-l4-synapses",
    "biophys_compartmental_solver/biophys-l4-nmda",
    "biophys_synapses_l4/biophys-l4-nmda",
]
biophys-l4-ca = [
    "biophys-l4",
    "biophys_channels/biophys-l4-ca",
    "biophys_compartmental_solver/biophys-l4-ca",
]
biophys-l4-stp = ["biophys-l4-synapses"]
biophys-l4-modulation = ["biophys-l4-synapses"]
biophys-l4-plasticity = ["biophys-l4-synapses", "biophys_synapses_l4/biophys-l4-plasticity"]
biophys-l4-homeostasis = ["biophys-l4-synapses", "biophys_homeostasis_l4/biophys-l4-homeostasis"]
biophys-l4-targeting = ["biophys-l4-synapses", "biophys_targeting_l4/biophys-l4-targeting"]
biophys-l4-amygdala = ["biophys-l4-synapses"]
biophys-l4-amygdala-assets = [
    "biophys-l4-amygdala",
    "dep:asset_rehydration",
    "dep:biophys_asset_builder",
    "dep:biophys_assets",
    "dep:ucf",
]

[dependencies]
biophys_channels = { path = "../biophys_channels", features = ["biophys", "biophys-l4", "biophys-l4-synapses"] }
biophys_compartmental_solver = { path = "../biophys_compartmental_solver", features = ["biophys", "biophys-l4", "biophys-l4-synapses"] }
biophys_core = { path = "../biophys_core", features = ["biophys", "biophys-l4"] }
biophys_event_queue_l4 = { path = "../biophys_event_queue_l4", features = ["biophys", "biophys-l4", "biophys-l4-synapses", "biophys-l4-stp"] }
biophys_homeostasis_l4 = { path = "../biophys_homeostasis_l4", features = ["biophys", "biophys-l4"] }
biophys_morphology = { path = "../biophys_morphology", features = ["biophys", "biophys-l4"] }
biophys_plasticity_l4 = { path = "../biophys_plasticity_l4" }
biophys_synapses_l4 = { path = "../biophys_synapses_l4", features = ["biophys", "biophys-l4", "biophys-l4-synapses", "biophys-l4-stp", "biophys-l4-modulation"] }
biophys_targeting_l4 = { path = "../biophys_targeting_l4", features = ["biophys", "biophys-l4", "biophys-l4-targeting"] }
asset_rehydration = { path = "../asset_rehydration", optional = true }
biophys_asset_builder = { path = "../biophys_asset_builder", optional = true }
biophys_assets = { path = "../biophys_assets", optional = true }
blake3 = "1"
dbm_core = { path = "../dbm_core" }
microcircuit_amygdala_stub = { path = "../microcircuit_amygdala_stub" }
microcircuit_core = { path = "../microcircuit_core" }
ucf = { package = "ucf-protocol", path = "../../ucf-protocol", optional = true }

[dev-dependencies]
asset_chunker = { path = "../asset_chunker" }
prost = "0.12"
ucf = { package = "ucf-protocol", path = "../../ucf-protocol" }
