[package]
name = "microcircuit_insula_fusion"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
dbm_core = { path = "../dbm_core" }
microcircuit_core = { path = "../microcircuit_core" }
microcircuit_insula_stub = { path = "../microcircuit_insula_stub" }
microcircuit_pag_stub = { path = "../microcircuit_pag_stub" }
