[package]
name = "microcircuit_pag_attractor"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
dbm_core = { path = "../dbm_core" }
microcircuit_core = { path = "../microcircuit_core" }
microcircuit_pag_stub = { path = "../microcircuit_pag_stub" }

[dev-dependencies]
biophys_core = { path = "../biophys_core" }
